# KAP-Studio

./: .gitignore  README_RU.md  pyproject.toml
.github/workflows/: build-windows.yml
data/: photoshop_2023.kap.json
docs/adr/: ADR-0004-workspace-container.md  ADR-0005-remove-demo-project.md
docs/specifications/: KPM-0001_Project_Manager.md  KWE-0001_Workspace_Engine.md
scripts/: build_windows_exe.bat  run_dev.bat  setup_windows.bat
src/kap_studio/: main.py
src/kap_studio/application/: project_service.py
src/kap_studio/domain/: journey_factory.py  models.py  review.py
src/kap_studio/infrastructure/: settings_repository.py
src/kap_studio/ui/: main_window.py  new_project_dialog.py  project_editor.py  welcome_window.py
src/kap_studio/workspace/: engine.py  manifest.py
tests/: test_workspace.py
